--- a/mobile/RackApp/src/app/pages/startup/startup.page.html
+++ b/mobile/RackApp/src/app/pages/startup/startup.page.html
@@ -5,7 +5,7 @@
   <p class="line-1">What's in your closet?</p><br>
   <br>
   <p>Whats on your...</p>
-  <img src="assets/icon/rack-logo-1.svg" alt="">
+  <img src="assets/icon/rack-logo-1.svg" alt="" class="mx-auto d-block">
   <br>
   <br>
   <br>
