--- a/mobile/RackApp/src/app/components/default-head/default-head.component.scss
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.scss
@@ -15,3 +15,10 @@
 //     width:27vw;
 //     height:auto;
 // }
+
+input[type="file"]{
+    visibility: hidden;
+    width: 0;
+    height: 0;
+
+}
