--- a/mobile/RackApp/src/app/components/default-head/default-head.component.scss
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.scss
@@ -27,3 +27,14 @@ input[type="file"]{
     height: 34px;
     width: 34px;
 }
+
+.add-photo-icon{
+    height: 20px;
+    width: 20px;
+}
+
+
+.avatar-details {
+    height: 60px;
+    width: 60px;
+}
